# clock

./: Cargo.toml  Makefile
dto/: Cargo.toml
dto/src/: lib.rs
frontend/: Cargo.toml  index.html  input.css  tailwind.config.js
frontend/components/: Cargo.toml
frontend/components/src/: alert.rs  calendar_reminder.rs  carousel.rs  clock.rs  date_util.rs  lib.rs  overlay.rs  sun.rs  task_reminder.rs  weather_current.rs  weather_forecast.rs  weather_humidity.rs  weather_precipitation.rs  weather_util.rs
frontend/pages/: Cargo.toml
frontend/pages/src/: home.rs
frontend/router/src/: lib.rs
frontend/src/: main.rs
frontend/stores/: Cargo.toml
frontend/stores/src/: lib.rs
scripts/: clock.service
server/api/: Cargo.toml
server/api/src/: display.rs  error.rs  lib.rs  websocket.rs
server/service/: Cargo.toml
server/service/src/: display.rs  home_assistant.rs  lib.rs  weather_current.rs
