[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.3.0"
gloo-timers = "0.2.6"
js-sys = "0.3.64"
log = "0.4.19"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "HtmlDivElement", "Element"] }
yew = { version = "0.20.0", features = ["csr"] }
