[package]
name = "pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components = { path = "../components" }
log = "0.4.19"
stores = { path = "../stores" }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
