[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-extra = { version = "0.7.5", features = ["typed-routing"] }
dto = { path = "../../dto" }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
headers = "0.3.8"
log = "0.4.18"
serde_json = "1.0.103"
service = { path = "../service" }
tokio = { version = "1.28.2", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
