[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["ws"] }
dto = { path = "../../dto" }
futures-util = { version = "0.3.28", features = ["sink"] }
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.174"
serde_json = "1.0.103"
time = { version = "0.3.23", features = ["serde", "parsing"] }
tokio = "1.29.1"
tokio-util = { version = "0.7.8", features = ["time"] }
